[package]
name = "typst-flow-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.38"
console_error_panic_hook = "0.1.7"
typst = "0.12.0"
typst-assets = { version = "0.12.0", features = ["fonts"] }
typst-ide = "0.12.0"
typst-svg = "0.12.0"
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "RequestMode", "Response", "Window", "XmlHttpRequest"] }
serde = { version = "1.0.215", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4"
futures = "0.3"
parking_lot = "0.12.3"
reqwest = { version = "0.12.9", features = ["blocking", "multipart"]}
flate2 = "1.0.35"
tar = "0.4.43"
